<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
        
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

    <!-- android:layout_height="wrap_content" -->
    <EditText
        android:id="@+id/editText1"
        android:layout_height="wrap_content"
        android:ems="30"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="#EDEDED"
        android:layout_width="350dp"
        android:singleLine="true" >
    </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

    <EditText
        android:id="@+id/editText2"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
       	android:layout_width="350dp"
        android:ems="30"
        android:hint="@string/password"
        android:textColorHint="#EDEDED"
        android:inputType="textPassword"
        android:singleLine="true" />
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="24dp"
	        android:text="@string/loginBtn"
	        android:onClick="gotoMainMenu" />

	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="24dp"
	        android:text="@string/reset" />
	    </LinearLayout>
</LinearLayout>